--- a/CodeForgeIDE.CSharp/CodeForgeIDE.CSharp.csproj
+++ b/CodeForgeIDE.CSharp/CodeForgeIDE.CSharp.csproj
@@ -10,12 +10,44 @@
     <None Remove="Assets\csharp-project.svg" />
     <None Remove="Assets\csharp-sln.svg" />
     <None Remove="Assets\Icons\csharp.svg" />
+    <None Remove="Assets\Icons\file.svg" />
+    <None Remove="Assets\Icons\symbol-class.svg" />
+    <None Remove="Assets\Icons\symbol-constant.svg" />
+    <None Remove="Assets\Icons\symbol-enum-member.svg" />
+    <None Remove="Assets\Icons\symbol-enum.svg" />
+    <None Remove="Assets\Icons\symbol-event.svg" />
+    <None Remove="Assets\Icons\symbol-field.svg" />
+    <None Remove="Assets\Icons\symbol-interface.svg" />
+    <None Remove="Assets\Icons\symbol-keyword.svg" />
+    <None Remove="Assets\Icons\symbol-method.svg" />
+    <None Remove="Assets\Icons\symbol-misc.svg" />
+    <None Remove="Assets\Icons\symbol-namespace.svg" />
+    <None Remove="Assets\Icons\symbol-parameter.svg" />
+    <None Remove="Assets\Icons\symbol-property.svg" />
+    <None Remove="Assets\Icons\symbol-structure.svg" />
+    <None Remove="Assets\Icons\symbol-variable.svg" />
   </ItemGroup>
 
   <ItemGroup>
     <AvaloniaResource Include="Assets\Icons\csharp-project.svg" />
     <AvaloniaResource Include="Assets\Icons\csharp-sln.svg" />
     <AvaloniaResource Include="Assets\Icons\csharp.svg" />
+    <AvaloniaResource Include="Assets\Icons\file.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-class.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-constant.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-enum-member.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-enum.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-event.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-field.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-interface.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-keyword.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-method.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-misc.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-namespace.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-parameter.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-property.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-structure.svg" />
+    <AvaloniaResource Include="Assets\Icons\symbol-variable.svg" />
   </ItemGroup>
 
   <ItemGroup>
