--- a/CodeForgeIDE/CodeForgeIDE.csproj
+++ b/CodeForgeIDE/CodeForgeIDE.csproj
@@ -14,6 +14,7 @@
     <None Remove="Assets\Icons\caret-bottom-right-solid-8.svg" />
     <None Remove="Assets\Icons\caret-right-8.svg" />
     <None Remove="Assets\Icons\chrome-close.svg" />
+    <None Remove="Assets\Icons\chrome-minimize.svg" />
     <None Remove="Assets\Icons\cog.svg" />
     <None Remove="Assets\Icons\file-code.svg" />
     <None Remove="Assets\Icons\file-folder.svg" />
@@ -22,6 +23,7 @@
     <None Remove="Assets\Icons\open-in-new-tab.svg" />
     <None Remove="Assets\Icons\open.svg" />
     <None Remove="Assets\Icons\tab-desktop-multiple-sparkle-16-filled.svg" />
+    <None Remove="Assets\Icons\window-multiple-20-regular.svg" />
     <None Remove="Assets\Icons\x.svg" />
     <None Remove="Assets\Splash.jpg" />
   </ItemGroup>
@@ -32,6 +34,7 @@
     <AvaloniaResource Include="Assets\Icons\caret-bottom-right-solid-8.svg" />
     <AvaloniaResource Include="Assets\Icons\caret-right-8.svg" />
     <AvaloniaResource Include="Assets\Icons\chrome-close.svg" />
+    <AvaloniaResource Include="Assets\Icons\chrome-minimize.svg" />
     <AvaloniaResource Include="Assets\Icons\cog.svg" />
     <AvaloniaResource Include="Assets\Icons\file-code.svg" />
     <AvaloniaResource Include="Assets\Icons\file-folder.svg" />
@@ -40,6 +43,7 @@
     <AvaloniaResource Include="Assets\Icons\open-in-new-tab.svg" />
     <AvaloniaResource Include="Assets\Icons\open.svg" />
     <AvaloniaResource Include="Assets\Icons\tab-desktop-multiple-sparkle-16-filled.svg" />
+    <AvaloniaResource Include="Assets\Icons\window-multiple-20-regular.svg" />
     <AvaloniaResource Include="Assets\Icons\x.svg" />
     <AvaloniaResource Include="Assets\Splash.jpg" />
   </ItemGroup>
